# oexplainer

./: README.md  pyproject.toml  requirements.txt  run_pipeline.py
oexplainer/data/: kegg_loader.py  loaders.py  ppi_loader.py  splits.py  synthetic.py  types.py
oexplainer/explain/: graphlets.py  oexplainer.py  orbit_features.py
oexplainer/models/: gnn.py  train.py
oexplainer/utils/: io.py  metrics.py  seed.py
scripts/: run_demo.sh
tests/: test_graphlets.py  test_orbit_features.py
