[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oexplainer"
version = "0.1.0"
description = "Orbit-based GNN Explainer (OExplainer) reference implementation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Emre Sefer et al."}]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["oexplainer*"]
